--- a/css/styles.css
+++ b/css/styles.css
@@ -1,20 +1,9 @@
-* {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-ul, li {
-margin: 0;
-padding: 3px;
-}
-body {
-  background-color: white;
-  color: #000;
-  font-family: 'Lato', sans-serif;
-  font-weight: 400; 
-  font-size: 16px;
-  line-height: 1.6;
+*{
   margin: 0;
-  text-align: center;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  box-sizing: border-box;
 }
 .page-header {
   width: 100%;
@@ -22,12 +11,34 @@ body {
   background-color: #baddf9;
   background-image: linear-gradient(to right, lightblue, lightgreen);
 }
-.buttonStyle {
-  color: white;
 
+body{
+  font-family: 'Rubik', sans-serif;
+  background-image: url();
 }
-button {
-  width: 50%;
+.top-container {
+  height:10px;
+}
+
+h1{
+  text-align: center;
+  font-size: 50px;
+  padding:10px;
+  margin: 0 0 10px
+}
+
+ul:first-child{
+  padding-top:10px;
+}
+
+ul li{
+  text-align: center;
+  margin:0 auto;
+  list-style: none;
+}
+
+.buttonStyle {
+   width: 50%;
   cursor: pointer;
   position: relative;
   padding: 2.5rem 7.5rem;
@@ -44,53 +55,22 @@ button {
               0 0.75rem 0.5rem rgba(255,255,255, 0.4) inset,
               0 0.25rem 0.5rem 0 rgba(180, 70, 207, 1) inset;
 }
-button span {
-  color: transparent;
-  background-image: linear-gradient(0deg, #EE82DA 0%, #FEFAFD 100%);
-  -webkit-background-clip: text;
-  background-clip: text;
-  filter: drop-shadow(0 2px 2px hsla(290, 100%, 20%, 1));
-  
-}
-button::before {
-  content: "";
-  display: block;
-  height: 0.25rem;
-  position: absolute;
-  top: 0.5rem;
-  left: 50%;
-  transform: translateX(-50%);
-  width: calc(100% - 7.5rem);
-  background: #fff;
-  border-radius: 100%;
-  
-  opacity: 0.7;
-  background-image: linear-gradient(-270deg, rgba(255,255,255,0.00) 0%, #FFFFFF 20%, #FFFFFF 80%, rgba(255,255,255,0.00) 100%);
+
+.button-style:hover,
+.button-style:focus {
+  background-color: #000;
+  border-bottom: 5px solid #F4F4F4;
+  outline:0;
 }
 
-button::after {
-  content: "";
-  display: block;
-  height: 0.25rem;
-  position: absolute;
-  bottom: 0.75rem;
-  left: 50%;
-  transform: translateX(-50%);
-  width: calc(100% - 7.5rem);
-  background: #fff;
-  border-radius: 100%;
-  
-  filter: blur(1px);
-  opacity: 0.05;
-  background-image: linear-gradient(-270deg, rgba(255,255,255,0.00) 0%, #FFFFFF 20%, #FFFFFF 80%, rgba(255,255,255,0.00) 100%);
-}
-button:hover, button:focus, .button:hover, .button:focus {
-  cursor: pointer;
-  opacity: 0.8;
+img{
+  height: 60px;
+  width: auto;
 }
 
-.button:visited {
-  color: #000;
+.bottom-container{
+  background-color: white;
+  height:30px;
 }
 
 footer {
@@ -103,67 +83,97 @@ footer .social {
   text-align: center;
 }
 
-footer .social a {
-  text-decoration: none;
-  width: 24px;
-  height: 24px;
-  margin: 5px; 
+#modal-container {
+  display: none;
 }
 
-footer .social .social-icon {
-  width: 24px;
-  height: 24px;
-}
-.pokemon-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: column;
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #fff;
+  padding: 15px;
   width: 100%;
-  padding-left: 0px;
-  margin: 0px;
+  max-width: 500px;
+  text-align: left;
+  border-radius: 10px;
+
 }
-.pokemon-list__item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: column;
+
+.modal h1 {
+  margin-top: 10px;
+}
+
+.modal p {
+  text-align: center;
+  margin-bottom: 0;
+}
+
+#modal-container.is-visible {
+  display: block;
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
   width: 100%;
-  background-color: #F5F5F6;
-  margin-top: 15px;
-  list-style-type: none;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  /* to show it above other content */
+  z-index: 999;
+  /*to allow scrolling if the screen is not high enough*/
+  overflow: auto;
+  /* this is used to center the modal */
+  text-align: center;
 }
-h1 {
-  font-size: 50px;
-  font-weight: 700;
-  margin: 10px;
-}
-@media all and (max-width: 700px) {
-  h1 {
-    font-size: 45px; 
-  }
-  a {
-  color: #2f796e;
-  }
 
-  a:visited {
-  color: #05676e;
-  }
-
-  a:hover, a:focus {
-  text-decoration: none;
-  }
-
-  a:active {
-  color: #489c79;
-  }
-  .buttonStyle {
-  color: white;
-  padding: 40px;
+.modal-img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   width: 50%;
-  
+  height: auto;
 }
 
+.modal-close{
+  -moz-box-shadow:inset 0px 1px 0px 0px #d9fbbe;
+  -webkit-box-shadow:inset 0px 1px 0px 0px #d9fbbe;
+  box-shadow:inset 0px 1px 0px 0px #d9fbbe;
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #b8e356), color-stop(1, #a5cc52));
+  background:-moz-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
+  background:-webkit-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
+  background:-o-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
+  background:-ms-linear-gradient(top, #b8e356 5%, #a5cc52 100%);
+  background:linear-gradient(to bottom, #b8e356 5%, #a5cc52 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#b8e356', endColorstr='#a5cc52',GradientType=0);
+  background-color:#b8e356;
+  -moz-border-radius:6px;
+  -webkit-border-radius:6px;
+  border-radius:6px;
+  border:1px solid #83c41a;
+  display:block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:12px;
+  font-weight:bold;
+  padding:6px 6px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #86ae47;
+  float:right;
+}
+
+/*==============
+  MEDIA QUERIES
+==============*/
+@media all and (max-width: 600px) {
+  .button-style  {
+    width:60%;
+    font-size: 85%;
+  }
+  h1 {
+  font-size: 25px;
+  }
 }
 
 
